--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -5,8 +5,15 @@
     display: flex;
     align-items: end;
     
+    
 }
 .slogan{
+    -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(transparent));
+    -webkit-mask-image: linear-gradient(to right, black 40%, transparent 120%);
+    mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(transparent));
+    mask-image: linear-gradient(to right, black 40%, transparent 120%);
+
+    border-radius: 0px 700px 0px 0px;
     display: flex;
     flex-direction: column;
     align-items: start;
