--- a/src/components/BannerCommunity/BannerCommunity.css
+++ b/src/components/BannerCommunity/BannerCommunity.css
@@ -4,8 +4,12 @@
     height: 21vh;
 }
 .sloganCommunity{
+    /* -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(transparent));
+    -webkit-mask-image: linear-gradient(to right, black 8%, transparent 125%);
+    mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(transparent)); */
+    background: linear-gradient(to right, rgb(255, 255, 255) 8%, transparent 125%);
     width: 60%;
-    background-color: white;
+    /* background-color: white; */
     height: 100%;
     border-radius: 0px 120px 0px 0px;
     display: flex;
