--- a/src/components/Toplist/Toplist.css
+++ b/src/components/Toplist/Toplist.css
@@ -2,6 +2,7 @@
     background-color: white;
     width: 100%;
     height: 40vh;
+    display: flex;
 }
 .description{
     background-color: red;
@@ -12,11 +13,12 @@
     flex-direction: column;
     align-items: start;
     margin-left: 3vw;
+    margin-top: 10vh;
 }
-.titleToplist{
+/* .titleToplist{
     color: #5347C5;
     margin-left: 3vw;
     margin-top: ;
     font-size: ;
     font-weight: ;
-}
+} */
