--- a/src/components/RepComp/RepComp.css
+++ b/src/components/RepComp/RepComp.css
@@ -13,6 +13,7 @@
     margin-top: 3vh;
     width: 90vw;
     height: 16vh;
+    align-items: center;
 }
 .theme{
     display: flex;
@@ -39,9 +40,14 @@
     margin-top: 1vh;
     color: gray;
 }
+.selects{
+    display: flex;
+    width: 60vw;
+    gap: 2vw;
+    margin-left: 2vw;
+}
 .buttonSearch{
     margin-left: 35vw;
-    margin-top: 6.5vh;
     background-color: blue;
     color: white;
     height: 4vh;
@@ -56,6 +62,7 @@
     margin-top: 2vh;
     margin-left: 6vw;
     gap: 3vw;
+    flex-wrap: wrap;
 }
 .new{
     display: flex;
