icons and images added

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,12 +1,13 @@
 .banner{
-    background-color: blue;
+    background-image: url("../../assets/banner_header.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100vw;
     height: 55vh;
     display: flex;
-    align-items: end;
-    
-    
+    align-items: end;    
 }
+
 .slogan{
     /* -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(black), to(transparent));
     -webkit-mask-image: linear-gradient(to right, black 40%, transparent 120%);
