--- a/src/components/BannerCommunity/BannerCommunity.css
+++ b/src/components/BannerCommunity/BannerCommunity.css
@@ -26,7 +26,7 @@
     font-weight: 600;
 }
 .sentenceCommunity{
-    color: #5347C5;
+    color: #000036;
     margin-left: 8vw;
     font-size: 2.2em;
     font-weight: 700;
