--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,7 +15,7 @@
     gap:30px;
     font-size: 18px;
     font-weight: 600;
-    color:#5347C5;
+    color:#000036;
 }
 
 
@@ -24,7 +24,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    color:#5347C5;
+    color:#000036;
 }
 
 .logo-img{
@@ -44,7 +44,7 @@
     margin-left: -100px;
     margin-top: -10px;
     border-color: transparent;
-    color:#5347C5;
+    color:#000036;
     font-size: 18px;
     font-weight: 500;
     outline: none; 
@@ -52,7 +52,7 @@
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color:#5347C5;
+    color:#000036;
     font-size: 18px;
     font-weight: 500;
   }
